--- a/redhat/kernel.changelog-8.1
+++ b/redhat/kernel.changelog-8.1
@@ -1,3 +1,247 @@
+* Thu May 30 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-99.el8]
+- [netdrv] qede: use ethtool_rx_flow_rule() to remove duplicated parser code (Manish Chopra) [1663274]
+- [netdrv] qede: place ethtool_rx_flow_spec after code after TC flower codebase (Manish Chopra) [1663274]
+- [netdrv] drivers: net: use flow action infrastructure (Manish Chopra) [1663274]
+- [netdrv] flow_offload: add flow_rule and flow_match structures and use them (Manish Chopra) [1663274]
+- [infiniband] RDMA: Cleanup undesired pd->uobject usage (Manish Chopra) [1663274]
+- [netdrv] qede: Populate mbi version in ethtool driver query data. (Manish Chopra) [1663274]
+- [netdrv] qed: Define new MF bit for no_vlan config (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "faspath" -> "fastpath" (Manish Chopra) [1663274]
+- [netdrv] qed: Fix the DORQ's attentions handling (Manish Chopra) [1663274]
+- [netdrv] qed: Fix missing DORQ attentions (Manish Chopra) [1663274]
+- [netdrv] qed: Fix the doorbell address sanity check (Manish Chopra) [1663274]
+- [netdrv] qed: Delete redundant doorbell recovery types (Manish Chopra) [1663274]
+- [netdrv] qede: fix write to free'd pointer error and double free of ptp (Manish Chopra) [1663274]
+- [netdrv] qede: Fix internal loopback failure with jumbo mtu configuration (Manish Chopra) [1663274]
+- [netdrv] qed: Read device port count from the shmem (Manish Chopra) [1663274]
+- [netdrv] qed: Fix iWARP syn packet mac address validation. (Manish Chopra) [1663274]
+- [netdrv] qed: Fix iWARP buffer size provided for syn packet processing. (Manish Chopra) [1663274]
+- [netdrv] qed: fix indentation issue with statements in an if-block (Manish Chopra) [1663274]
+- [netdrv] qede: Add ethtool interface for SmartAN query. (Manish Chopra) [1663274]
+- [netdrv] qed: Add API for SmartAN query. (Manish Chopra) [1663274]
+- [netdrv] qed*: Advance drivers version to 8.37.0.20 (Manish Chopra) [1663274]
+- [netdrv] qed: Change verbosity for coalescing message. (Manish Chopra) [1663274]
+- [netdrv] qede: Fix system crash on configuring channels. (Manish Chopra) [1663274]
+- [netdrv] qed: Consider TX tcs while deriving the max num_queues for PF. (Manish Chopra) [1663274]
+- [netdrv] qed: Assign UFP TC value to vlan priority in UFP mode. (Manish Chopra) [1663274]
+- [netdrv] qed: Fix EQ full firmware assert. (Manish Chopra) [1663274]
+- [netdrv] qed: Fix stack out of bounds bug (Manish Chopra) [1663274]
+- [netdrv] qed: Fix system crash in ll2 xmit (Manish Chopra) [1663274]
+- [netdrv] qed: Fix VF probe failure while FLR (Manish Chopra) [1663274]
+- [netdrv] qed: Fix LACP pdu drops for VFs (Manish Chopra) [1663274]
+- [netdrv] qed: Fix bug in tx promiscuous mode settings (Manish Chopra) [1663274]
+- [netdrv] qede: Error recovery process (Manish Chopra) [1663274]
+- [netdrv] qed: Add infrastructure for error detection and recovery (Manish Chopra) [1663274]
+- [netdrv] qed: Revise load sequence to avoid PCI errors (Manish Chopra) [1663274]
+- [netdrv] qed: Mark expected switch fall-through (Manish Chopra) [1663274]
+- [include] qed: remove duplicated include from qed_if.h (Manish Chopra) [1663274]
+- [infiniband] RDMA/qedr: Fix out of bounds index check in query pkey (Manish Chopra) [1663274]
+- [netdrv] qed: Fix qed_ll2_post_rx_buffer_notify_fw() by adding a write memory barrier (Manish Chopra) [1663274]
+- [include] qed: Fix qed_chain_set_prod() for PBL chains with non power of 2 page count (Manish Chopra) [1663274]
+- [infiniband] infiniband/qedr: Potential null ptr dereference of qp (Manish Chopra) [1663274]
+- [netdrv] qed: Fix an error code qed_ll2_start_xmit() (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "Dispalying" -> "Displaying" (Manish Chopra) [1663274]
+- [netdrv] qede: Register l2 queues with doorbell overflow recovery mechanism (Manish Chopra) [1663274]
+- [netdrv] qed: Expose the doorbell overflow recovery mechanism to the protocol drivers (Manish Chopra) [1663274]
+- [netdrv] qed: Register light L2 queues with doorbell overflow recovery mechanism (Manish Chopra) [1663274]
+- [netdrv] qed: Register slowpath queue doorbell with doorbell overflow recovery mechanism (Manish Chopra) [1663274]
+- [netdrv] qed: Use the doorbell overflow recovery mechanism in case of doorbell overflow (Manish Chopra) [1663274]
+- [netdrv] qed: Add doorbell overflow recovery mechanism (Manish Chopra) [1663274]
+- [netdrv] qede - Add a statistic for a case where driver drops tx packet due to memory allocation failure. (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "attnetion" -> "attention" (Manish Chopra) [1663274]
+- [netdrv] qed: Add support for MBI upgrade over MFW. (Manish Chopra) [1663274]
+- [netdrv] qede: Update link status only when interface is ready. (Manish Chopra) [1663274]
+- [netdrv] qede: Simplify the usage of qede-flags. (Manish Chopra) [1663274]
+- [netdrv] qed: Display port_id in the UFP debug messages. (Manish Chopra) [1663274]
+- [netdrv] qed: Fix QM getters to always return a valid pq (Manish Chopra) [1663274]
+- [netdrv] qed: Fix bitmap_weight() check (Manish Chopra) [1663274]
+- [netdrv] drivers/net/ethernet/qlogic/qed/qed_rdma.h: fix typo (Manish Chopra) [1663274]
+- [netdrv] qed: Fix reading wrong value in loop condition (Manish Chopra) [1663274]
+- [netdrv] qed: Fix rdma_info structure allocation (Manish Chopra) [1663274]
+- [netdrv] qed: Fix overriding offload_tc by protocols without APP TLV (Manish Chopra) [1663274]
+- [netdrv] qed: Fix PTT leak in qed_drain() (Manish Chopra) [1663274]
+- [netdrv] qed: Fix potential memory corruption (Manish Chopra) [1663274]
+- [netdrv] qed: Fix SPQ entries not returned to pool in error flows (Manish Chopra) [1663274]
+- [netdrv] qed: Fix blocking/unlimited SPQ entries leak (Manish Chopra) [1663274]
+- [netdrv] qed: Fix memory/entry leak in qed_init_sp_request() (Manish Chopra) [1663274]
+- [netdrv] qed: fix link config error handling (Manish Chopra) [1663274]
+- [netdrv] qed: Fix static checker warning (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "transcevier" -> "transceiver" (Manish Chopra) [1663274]
+- [netdrv] qed: Prevent link getting down in case of autoneg-off. (Manish Chopra) [1663274]
+- [netdrv] qede: Check available link modes before link set from ethtool. (Manish Chopra) [1663274]
+- [netdrv] qed: Add supported link and advertise link to display in ethtool. (Manish Chopra) [1663274]
+- [netdrv] qed: Added supported transceiver modes, speed capability and board config to HSI. (Manish Chopra) [1663274]
+- [netdrv] qed: Align local and global PTT to propagate through the APIs. (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "Ireelevant" -> "Irrelevant" (Manish Chopra) [1663274]
+- [netdrv] qed: Avoid implicit enum conversion in qed_ooo_submit_tx_buffers (Manish Chopra) [1663274]
+- [infiniband] RDMA/qedr: Remove enumerated type qed_roce_ll2_tx_dest (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "b_cb_registred" -> "b_cb_registered" (Manish Chopra) [1663274]
+- [netdrv] qed: Remove set but not used variable 'p_archipelago' (Manish Chopra) [1663274]
+- [netdrv] qed: Avoid implicit enum conversion in qed_iwarp_parse_rx_pkt (Manish Chopra) [1663274]
+- [netdrv] qed: Avoid constant logical operation warning in qed_vf_pf_acquire (Manish Chopra) [1663274]
+- [netdrv] qed: Avoid implicit enum conversion in qed_roce_mode_to_flavor (Manish Chopra) [1663274]
+- [netdrv] qed: Fix mask parameter in qed_vf_prep_tunn_req_tlv (Manish Chopra) [1663274]
+- [netdrv] qed: Avoid implicit enum conversion in qed_set_tunn_cls_info (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "toogle" -> "toggle" (Manish Chopra) [1663274]
+- [netdrv] net: qed: list usage cleanup (Manish Chopra) [1663274]
+- [netdrv] net: qede: Use FIELD_SIZEOF directly instead of reimplementing its function (Manish Chopra) [1663274]
+- [netdrv] qed: remove duplicated include from qed_cxt.c (Manish Chopra) [1663274]
+- [netdrv] qed*: Utilize FW 8.37.7.0 (Manish Chopra) [1663274]
+- [infiniband] RDMA/qedr: remove set but not used variable 'ctx' (Manish Chopra) [1663274]
+- [netdrv] qed: Lower the severity of a dcbx log message. (Manish Chopra) [1663274]
+- [netdrv] qed: fix spelling mistake "comparsion" -> "comparison" (Manish Chopra) [1663274]
+- [netdrv] net_sched: remove list_head from tc_action (Manish Chopra) [1663274]
+- [infiniband] qedr: Add user space support for SRQ (Manish Chopra) [1663274]
+- [infiniband] qedr: Add support for kernel mode SRQ's (Manish Chopra) [1663274]
+- [infiniband] qedr: Add wrapping generic structure for qpidr and adjust idr routines. (Manish Chopra) [1663274]
+- [netdrv] qed/qede: qede_setup_tc() can be static (Manish Chopra) [1663274]
+- [netdrv] qede: Ingress tc flower offload (drop action) support. (Manish Chopra) [1663274]
+- [netdrv] qede: Add destination ip based flow profile. (Manish Chopra) [1663274]
+- [netdrv] qed/qede: Multi CoS support. (Manish Chopra) [1663274]
+- [netdrv] qede: qede_fp: Mark expected switch fall-through (Manish Chopra) [1663274]
+- [netdrv] qed: qed_dev: Mark expected switch fall-throughs (Manish Chopra) [1663274]
+- [netdrv] qed: Add Multi-TC RoCE support (Manish Chopra) [1663274]
+- [netdrv] qed: Add DCBX API - qed_dcbx_get_priority_tc() (Manish Chopra) [1663274]
+- [netdrv] qed: Make some functions static (Manish Chopra) [1663274]
+- [netdrv] qed: remove redundant functions qed_get_cm_pq_idx_rl (Manish Chopra) [1663274]
+- [netdrv] qed: remove redundant functions qed_set_gft_event_id_cm_hdr (Manish Chopra) [1663274]
+- [netdrv] qede: Add driver callbacks for eeprom module query. (Manish Chopra) [1663274]
+- [netdrv] qed: Add qed APIs for PHY module query. (Manish Chopra) [1663274]
+- [netdrv] qed: remove redundant pointer 'name' (Manish Chopra) [1663274]
+- [iommu] iommu: Don't print warning when IOMMU driver only supports unmanaged domains (Jerry Snitselaar) [1707616 1694210 1689183]
+- [iommu] iommu/vt-d: Check capability before disabling protected memory (Jerry Snitselaar) [1694210]
+- [iommu] iommu/amd: fix sg->dma_address for sg->offset bigger than PAGE_SIZE (Jerry Snitselaar) [1694210 1694029]
+- [iommu] iommu/amd: Fix NULL dereference bug in match_hid_uid (Jerry Snitselaar) [1677737 1694210]
+- [iommu] iommu/vt-d: Fix NULL pointer reference in intel_svm_bind_mm() (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Remove unnecessary WARN_ON() (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Check identity map for hot-added devices (Jerry Snitselaar) [1694210]
+- [iommu] iommu/dmar: Fix buffer overflow during PCI bus notification (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Fix memory leak in intel_iommu_put_resv_regions() (Jerry Snitselaar) [1694210]
+- [iommu] iommu/amd: Fix amd_iommu=force_isolation (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Handle domain agaw being less than iommu agaw (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Use memunmap to free memremap (Jerry Snitselaar) [1694210]
+- [iommu] amd/iommu: Fix Guest Virtual APIC Log Tail Address Register (Jerry Snitselaar) [1694210]
+- [iommu] iommu/vt-d: Fix NULL pointer dereference in prq_event_thread() (Jerry Snitselaar) [1694210]
+- [iommu] iommu/amd: Return devid as alias for ACPI HID devices (Jerry Snitselaar) [1694210]
+- [iommu] iommu/rockchip: Free irqs in shutdown handler (Jerry Snitselaar) [1694210]
+- [iommu] iommu/rockchip: Move irq request past pm_runtime_enable (Jerry Snitselaar) [1694210]
+- [iommu] iommu/rockchip: Handle errors returned from PM framework (Jerry Snitselaar) [1694210]
+- [iommu] iommu/amd: make sure TLB to be flushed before IOVA freed (Jerry Snitselaar) [1694210]
+- [idle] intel_idle: Get rid of custom ICPU() macro (Alexander Beregalov) [1710976]
+- [security] selinux: do not report error on connect(AF_UNSPEC) (Ondrej Mosnacek) [1707828]
+- [security] selinux: Check address length before reading address family (Ondrej Mosnacek) [1707828]
+- [scsi] scsi: core: add new RDAC LENOVO/DE_Series device (Maurizio Lombardi) [1700912]
+- [infiniband] i40iw: Avoid panic when handling the inetdev event (Stefan Assmann) [1659180]
+- [infiniband] cross-tree: phase out dma_zalloc_coherent() (Stefan Assmann) [1659180]
+- [infiniband] infiniband: prefix header search paths with $(srctree)/ (Stefan Assmann) [1659180]
+- [infiniband] i40iw: remove use of VLAN_TAG_PRESENT (Stefan Assmann) [1659180]
+- [infiniband] RDMA/i40iw: Fix incorrect iterator type (Stefan Assmann) [1659180]
+- [infiniband] infiniband: i40iw, nes: don't use wall time for TCP sequence numbers (Stefan Assmann) [1659180]
+- [infiniband] i40iw: Reorganize acquire/release of locks in i40iw_manage_apbvt (Stefan Assmann) [1659180]
+- [netdrv] i40e: Changed maximum supported FW API version to 1.8 (Stefan Assmann) [1659174]
+- [netdrv] flow_offload: add flow_rule and flow_match structures and use them (Stefan Assmann) [1659174]
+- [netdrv] ethernet/intel: consolidate NAPI and NAPI exit (Stefan Assmann) [1659174]
+- [netdrv] intel-ethernet: software timestamp skbs as late as possible (Stefan Assmann) [1659174]
+- [netdrv] drivers: net: remove <net/busy_poll.h> inclusion when not needed (Stefan Assmann) [1659174]
+- [netdrv] i40e: Memory leak in i40e_config_iwarp_qvlist (Stefan Assmann) [1659162]
+- [netdrv] i40e: Fix of memory leak and integer truncation in i40e_virtchnl.c (Stefan Assmann) [1659162]
+- [netdrv] i40e: Use struct_size() in kzalloc() (Stefan Assmann) [1659162]
+- [netdrv] i40e: Revert ShadowRAM checksum calculation change (Stefan Assmann) [1659162]
+- [netdrv] i40e: missing input validation on VF message handling by the PF (Stefan Assmann) [1659162]
+- [netdrv] i40e: Add support for X710 B/P & SFP+ cards (Stefan Assmann) [1659162]
+- [netdrv] i40e: Wrong truncation from u16 to u8 (Stefan Assmann) [1659162]
+- [netdrv] i40e: add num_vectors checker in iwarp handler (Stefan Assmann) [1659162]
+- [netdrv] i40e: Fix the typo in adding 40GE KR4 mode (Stefan Assmann) [1659162]
+- [netdrv] i40e: Setting VF to VLAN 0 requires restart (Stefan Assmann) [1659162]
+- [netdrv] i40e: add new pci id for X710/XXV710 N3000 cards (Stefan Assmann) [1659162]
+- [netdrv] i40e: VF's promiscuous attribute is not kept (Stefan Assmann) [1659162]
+- [netdrv] i40e: Introduce recovery mode support (Stefan Assmann) [1659162]
+- [netdrv] i40e: print PCI vendor and device ID during probe (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix misleading message about promisc setting on un-trusted VF (Stefan Assmann) [1659162]
+- [netdrv] i40e: update version number (Stefan Assmann) [1659162]
+- [netdrv] i40e: remove out-of-range comparisons in i40e_validate_cloud_filter (Stefan Assmann) [1659162]
+- [netdrv] i40e: Further implementation of LLDP (Stefan Assmann) [1659162]
+- [netdrv] i40e: Report advertised link modes on 40GBase_LR4, CR4 and fibre (Stefan Assmann) [1659162]
+- [netdrv] i40e: ShadowRAM checksum calculation change (Stefan Assmann) [1659162]
+- [netdrv] i40e: remove error msg when vf with port vlan tries to remove vlan 0 (Stefan Assmann) [1659162]
+- [netdrv] i40e: change behavior on PF in response to MDD event (Stefan Assmann) [1659162]
+- [netdrv] i40e: Fix for allowing too many MDD events on VF (Stefan Assmann) [1659162]
+- [netdrv] i40e: Fix misleading error message (Stefan Assmann) [1659162]
+- [netdrv] i40e: Able to add up to 16 MAC filters on an untrusted VF (Stefan Assmann) [1659162]
+- [netdrv] i40e: Report advertised link modes on 40GBASE_SR4 (Stefan Assmann) [1659162]
+- [netdrv] i40e: The driver now prints the API version in error message (Stefan Assmann) [1659162]
+- [netdrv] i40e: Changed maximum supported FW API version to 1.8 (Stefan Assmann) [1659162]
+- [netdrv] i40e: Remove misleading messages for untrusted VF (Stefan Assmann) [1659162]
+- [netdrv] i40e: Update i40e_init_dcb to return correct error (Stefan Assmann) [1659162]
+- [netdrv] i40e: Fix for 10G ports LED not blinking (Stefan Assmann) [1659162]
+- [netdrv] i40e: save PTP time before a device reset (Stefan Assmann) [1659162]
+- [netdrv] i40e: don't allow changes to HW VLAN stripping on active port VLANs (Stefan Assmann) [1659162]
+- [netdrv] i40e: Implement DDP support in i40e driver (Stefan Assmann) [1659162]
+- [netdrv] i40e: Queues are reserved despite "Invalid argument" error (Stefan Assmann) [1659162]
+- [netdrv] i40e: add tracking of AF_XDP ZC state for each queue pair (Stefan Assmann) [1659162]
+- [netdrv] i40e: move i40e_xsk_umem function (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix WoL support check (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix i40e_ptp_adjtime when given a negative delta (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix XDP_REDIRECT/XDP xmit ring cleanup race (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix potential RX buffer starvation for AF_XDP (Stefan Assmann) [1659162]
+- [netdrv] net: bpf: remove XDP_QUERY_XSK_UMEM enumerator (Stefan Assmann) [1659162]
+- [netdrv] flow_offload: add flow_rule and flow_match structures and use them (Stefan Assmann) [1659162]
+- [netdrv] i40e: clean up several indentation issues (Stefan Assmann) [1659162]
+- [netdrv] i40e: increase indentation (Stefan Assmann) [1659162]
+- [netdrv] i40e: update version number (Stefan Assmann) [1659162]
+- [netdrv] i40e: remove debugfs tx_timeout support (Stefan Assmann) [1659162]
+- [netdrv] i40e: check queue pairs num in config queues handler (Stefan Assmann) [1659162]
+- [netdrv] i40e: Change unmatched function types (Stefan Assmann) [1659162]
+- [netdrv] i40e: Add support FEC configuration for Fortville 25G (Stefan Assmann) [1659162]
+- [netdrv] i40e: Limiting RSS queues to CPUs (Stefan Assmann) [1659162]
+- [netdrv] i40e: Remove umem from VSI (Stefan Assmann) [1659162]
+- [netdrv] cross-tree: phase out dma_zalloc_coherent() (Stefan Assmann) [1659162]
+- [netdrv] i40e: extend PTP gettime function to read system clock (Stefan Assmann) [1659162]
+- [netdrv] i40e: DRY rx_ptype handling code (Stefan Assmann) [1659162]
+- [netdrv] i40e: fix kerneldoc for xsk methods (Stefan Assmann) [1659162]
+- [netdrv] ethernet/intel: consolidate NAPI and NAPI exit (Stefan Assmann) [1659162]
+- [netdrv] i40e: suppress bogus error message (Stefan Assmann) [1659162]
+- [netdrv] i40e: Allow disabling FW LLDP on X722 devices (Stefan Assmann) [1659162]
+- [netdrv] i40e: update driver version (Stefan Assmann) [1659162]
+- [netdrv] i40e: Protect access to VF control methods (Stefan Assmann) [1659162]
+- [netdrv] i40e: Replace strncpy with strlcpy to ensure null termination (Stefan Assmann) [1659162]
+- [netdrv] i40e: Add capability flag for stopping FW LLDP (Stefan Assmann) [1659162]
+- [netdrv] i40e: Use a local variable for readability (Stefan Assmann) [1659162]
+- [netdrv] i40e: Replace spin_is_locked() with lockdep (Stefan Assmann) [1659162]
+- [netdrv] i40e/ixgbe/igb: fail on new WoL flag setting WAKE_MAGICSECURE (Stefan Assmann) [1659162]
+- [netdrv] intel-ethernet: software timestamp skbs as late as possible (Stefan Assmann) [1659162]
+- [netdrv] drivers: net: remove <net/busy_poll.h> inclusion when not needed (Stefan Assmann) [1659162]
+- [netdrv] i40e: Remove unnecessary print statement (Stefan Assmann) [1659162]
+- [netdrv] i40e: Use proper enum in i40e_ndo_set_vf_link_state (Stefan Assmann) [1659162]
+- [nvme] nvmet: ignore EOPNOTSUPP for discard (Ewan Milne) [1696369]
+- [tools] tools: bpftool: fix potential NULL pointer dereference in do_load (Ivan Vecera) [1708560]
+- [tools] tools lib bpf: Provide wrapper for strerror_r to build in !_GNU_SOURCE systems (Ivan Vecera) [1708560]
+- [tools] libbpf: Remove the duplicate checking of function storage (Ivan Vecera) [1708560]
+- [tools] bpf: fix build error in libbpf with EXTRA_CFLAGS="-Wp, -D_FORTIFY_SOURCE=2 -O2" (Ivan Vecera) [1708560]
+- [tools] tools: include reallocarray feature test in FEATURE_TESTS_BASIC (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: allow reuse of maps with bpftool prog load (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: allow map reuse (Ivan Vecera) [1708560]
+- [tools] tools: bpf: make use of reallocarray (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: move library error code into a separate file (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: reimplement bpf_prog_load() for prog load (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: add extended attributes version of bpf_object__open() (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: recognize offload neutral maps (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: allow users to specify program type for prog load (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: expose the prog type guessing from section name logic (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: add support for loading programs for offload (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: refactor argument parsing for prog load (Ivan Vecera) [1708560]
+- [tools] selftests/bpf: add Error: prefix in check_extack helper (Ivan Vecera) [1708560]
+- [tools] selftests/bpf: remove duplicated word from test offloads (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: deal with options upfront (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: add missing --bpffs to completions (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: drop unnecessary Author comments (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: don't return '.text' as a program for multi-function programs (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: restore the ability to load programs from .text section (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: allow setting ifindex for programs and maps (Ivan Vecera) [1708560]
+- [tools] tools: libbpf: add section names for missing program types (Ivan Vecera) [1708560]
+- [tools] tools: bpftool: use correct make variable type to improve compilation time (Ivan Vecera) [1708560]
+- [scsi] scsi: lpfc: nvme: avoid hang / use-after-free when destroying localport (Dick Kennedy) [1588024]
+
 * Thu May 30 2019 Herton R. Krzesinski <herton@redhat.com> [4.18.0-98.el8]
 - [xen] ALSA: xen: Introduce shared buffer helpers for page directory... (Jaroslav Kysela) [1683051]
 - [drivers] ALSA: soundwire: Initialize completion for defer messages (Jaroslav Kysela) [1683051]
